--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <link rel="stylesheet" href="./src/styles/index.scss">
   </head>
   <body>
-    <div class="content_box">
-      <h1 class="h1 _mb_1">Pastry with love</h1>
+    <div class="content _bg_default">
+      <div class="inner">
+	<h1 class="h1 _mb_1">Pastry with love</h1>
 
-      <p class="accented_text _mb_1">
-	We re bringing you fresh ingredients every  <br /> day in ways you can’t resist
-      </p>
+	<p class="accented_text _mb_1">
+	  We re bringing you fresh ingredients every  <br /> day in ways you can’t resist
+	</p>
 
-      <div class="ta_c">
-	<button class="button_default">OUR MENU</button>
+	<div class="ta_c">
+	  <button class="button_default">OUR MENU</button>
+	</div>
       </div>
     </div>
     <script src='./src/index.js'></script>
